@@ -34,9 +34,3 @@ extern int hppa_pc_requires_run_before_use (CORE_ADDR pc);
 extern int hppa_instruction_nullified (void);
 #define INSTRUCTION_NULLIFIED hppa_instruction_nullified ()
 #endif
-
-/* On HP-UX, certain system routines (millicode) have names beginning
-   with $ or $$, e.g. $$dyncall, which handles inter-space procedure
-   calls on PA-RISC.  Tell the expression parser to check for those
-   when parsing tokens that begin with "$".  */
-#define SYMBOLS_CAN_START_WITH_DOLLAR (1)
